# python-ci-pavedroad

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.multistage  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-deploy-np.yaml  python-deploy.yaml  trufflehog.yaml
assets/: commit-message.md  hook-loop.sh  pull_request_template.md
notes/docker/: docker-file.md  dockeringnore.md
notes/pyproject/: build-system.md
notes/setup/: setup.md
src/python_ci_pavedroad_template_app/: app.py
tests/: conftest.py  test_health.py  test_root.py  test_users.py
